fix(frontend, breadcrumbs): no wrap for home
[skip ci pytest]

--- a/frontend_lib/src/component/Breadcrumbs/Breadcrumbs.styl
+++ b/frontend_lib/src/component/Breadcrumbs/Breadcrumbs.styl
@@ -25,10 +25,3 @@
 @media (max-width: max-xs)
   .breadcrumbs
     position static
-
-@media (max-width: max-md)
-  .breadcrumbs__item
-    &__home
-      display none
-    & i
-      margin 0
